# moore-web

./: .pre-commit-config.yaml  ISSUES.md  README.md  build_fr_mos_dataset.py  comet_flores.py  justfile  migrate_score_field.py  push_to_hf.py  pyproject.toml  test_pdfplumber.py
notebooks/: explore_aligned.py  laser_alignment.ipynb
scripts/: parse_kade_texts.py
src/moore_web/: add_len_ratio.py  align_corpus.py  annotate.py  bicolumns_parser.py  book_enum_parser.py  book_parser.py  book_parser_facilitateur.py  build_wordlists.py  clean_lexicon.py  cli.py  constants.py  dedup_aligned_comet.py  filter_nllb.py  flat_book.py  flatten.py  glossary_parser.py  glotlid.py  lang_id.py  models.py  news_scaper.py  parse_du_moore.py  pdf_extractor.py  score_comet_qe.py  score_laser.py  score_nllb_mos.py  segment.py  segment_news_data.py  set_logging.py  simple_parser.py  translation.py  types.py  upload_nllb_raw.py  wordlists.py
tests/: test_annotate.py  test_book_parser_facilitateur.py  test_flatten.py  test_flatten_noise.py  test_simple_parser.py
