[project]
name = "moore-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/moore_web"]

dependencies = [
    "loguru>=0.7.3",
    "pdfplumber>=0.11.8",
    "pydantic>=2.12.5",
    "pymupdf>=1.26.6",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
]
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff]
line-length = 110
target-version = "py313"

[tool.isort]
profile = "black"
line_length = 110