[project]
name = "moore-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0, <2.6.0",
    "laser-encoders>=0.0.2",
    "requests>=2.32.5",
    "loguru>=0.7.3",
    "pdfplumber>=0.11.8",
    "pydantic>=2.12.5",
    "pymupdf>=1.26.6",
    "tqdm>=4.67.1",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "msgspec>=0.20.0",
    "lingtrain-aligner>=1.0.3",
    "sentence-splitter>=1.4",
    "syntok>=1.4.4",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "fastdtw>=0.3.4",
    "sacremoses>=0.1.0",
    "beautifulsoup4>=4.14.3",
    "typer>=0.12.0",
    "unbabel-comet>=2.2.7",
    "setuptools>=80.9.0",  # explicit for comet
    "datasets>=2.14.0",
    "huggingface-hub>=0.20.0",
    "python-dotenv>=1.2.2",
    "fasttext>=0.9.3",
    "datatrove[processing]>=0.3.0",
]

[project.scripts]
moore-web = "moore_web.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/moore_web"]

[dependency-groups]
dev = [
    "prek>=0.3.0",
    "ruff>=0.14.10",
    "marimo>=0.10.0",
    "pytest>=9.0.2",
]
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.isort]
profile = "black"
line_length = 110

[tool.uv.sources]
sentence-splitter = { git = "https://github.com/mediacloud/sentence-splitter.git" }
